--- a/src/app/core/progress-bar/progress-bar.component.css
+++ b/src/app/core/progress-bar/progress-bar.component.css
@@ -1,10 +1,19 @@
-.img__prigress--bar{
-    width: 25px;
-    height: 25px;
-    margin-right: 5px;
+:host {
+  pointer-events: none !important;
+  display: flex;
+  justify-content: flex-end;
 }
-@media only screen and (max-width: 550px) {
-    .progress--bar {
-        display: none !important;
-    }
+
+mat-stepper {
+  background: transparent;
+}
+@media (max-width: 991px) {
+  mat-stepper {
+    max-width: 270px;
   }
+}
+@media (max-width: 841px) {
+  mat-stepper {
+    max-width: 120px;
+  }
+}
