fix(header): container-xl

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="container-xl">
   <nav
     class="d-flex justify-content-center align-items-center container-fluid justify-content-around"
   >
