--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -8,37 +8,83 @@
       /></a>
     </div>
 
-    <div class="ofset" *ngIf="!observer.max720">
+    <div class="ofset">
       <div *ngIf="isFirstPage || isBooking">
-        <span *ngIf="isFirstPage; else booking">Book flights</span>
+        <span *ngIf="isFirstPage; else booking">{{
+          !observer.max600 ? "Book flights" : ""
+        }}</span>
         <ng-template #booking>
           <app-progress-bar class="m-auto"></app-progress-bar>
         </ng-template>
       </div>
     </div>
 
-    <mat-form-field class="m-4" appearance="fill">
-      <mat-label>Select Date Format</mat-label>
-      <mat-select [(value)]="date" (selectionChange)="onDateFormatChage()">
-        <mat-option value="MM/DD/YYYY">MM/DD/YYYY</mat-option>
-        <mat-option value="DD/MM/YYYY">DD/MM/YYYY</mat-option>
-        <mat-option value="YYYY/DD/MM">YYYY/DD/MM</mat-option>
-        <mat-option value="YYYY/MM/DD">YYYY/MM/DD</mat-option>
-      </mat-select>
-    </mat-form-field>
-
-    <button mat-button [mat-menu-trigger-for]="menuCurrency">
-      {{ headState.currencyFormat }}
+    <button
+      mat-button
+      [mat-menu-trigger-for]="setup"
+      *ngIf="observer.max600; else test"
+    >
+      <mat-icon>settings</mat-icon>
     </button>
-    <mat-menu #menuCurrency>
-      <button
-        mat-menu-item
-        *ngFor="let currency of ['EUR', 'USD', 'RUB', 'PLN']"
-        (click)="onCurrencyChange(currency)"
-      >
-        {{ currency }}
+    <mat-menu #setup>
+      <button [mat-menu-trigger-for]="dateMenu" mat-menu-item>
+        {{ headState.dateFormat }}
       </button>
-    </mat-menu>
+      <mat-menu #dateMenu>
+        <button
+          mat-menu-item
+          *ngFor="
+            let date of ['MM/DD/YYYY', 'DD/MM/YYYY', 'YYYY/DD/MM', 'YYYY/MM/DD']
+          "
+          (click)="onDateFormatChange(date)"
+        >
+          {{ date }}
+        </button>
+      </mat-menu>
+
+      <button [mat-menu-trigger-for]="menuCurrency" mat-menu-item>
+        {{ headState.currencyFormat }}
+      </button>
+      <mat-menu #menuCurrency>
+        <button
+          mat-menu-item
+          *ngFor="let currency of ['EUR', 'USD', 'RUB', 'PLN']"
+          (click)="onCurrencyChange(currency)"
+        >
+          {{ currency }}
+        </button>
+      </mat-menu></mat-menu
+    >
+
+    <ng-template #test>
+      <button mat-button [mat-menu-trigger-for]="dateMenu">
+        {{ headState.dateFormat }}
+      </button>
+      <mat-menu #dateMenu>
+        <button
+          mat-menu-item
+          *ngFor="
+            let date of ['MM/DD/YYYY', 'DD/MM/YYYY', 'YYYY/DD/MM', 'YYYY/MM/DD']
+          "
+          (click)="onDateFormatChange(date)"
+        >
+          {{ date }}
+        </button>
+      </mat-menu>
+
+      <button mat-button [mat-menu-trigger-for]="menuCurrency">
+        {{ headState.currencyFormat }}
+      </button>
+      <mat-menu #menuCurrency>
+        <button
+          mat-menu-item
+          *ngFor="let currency of ['EUR', 'USD', 'RUB', 'PLN']"
+          (click)="onCurrencyChange(currency)"
+        >
+          {{ currency }}
+        </button>
+      </mat-menu>
+    </ng-template>
 
     <div class="nav-item">
       <button mat-button (click)="handleLog()">
