--- a/src/app/core/progress-bar/progress-bar.component.html
+++ b/src/app/core/progress-bar/progress-bar.component.html
@@ -1,4 +1,4 @@
-<mat-stepper linear [selectedIndex]="index">
+<mat-stepper linear [selectedIndex]="index" *ngIf="!observer.max720">
   <mat-step [editable]="false" [label]="observer.max1100 ? '' : 'Flights'">
   </mat-step>
 
