--- a/src/app/booking/components/one-side/one-side.component.html
+++ b/src/app/booking/components/one-side/one-side.component.html
@@ -19,7 +19,7 @@
     />
   </div>
   <div
-    *ngFor="let flight of flightCurrent"
+    *ngFor="let flight of flightsCurrent"
     class="flight-card m-2"
     (click)="selectCard(card, flight)"
     #card
