--- a/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
+++ b/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
@@ -30,7 +30,12 @@
     >
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
       <td style="white-space: pre" mat-cell *matCellDef="let element">
-        {{ element[column] }}
+        <ng-container *ngIf="column === 'Price'">
+          {{ element[column] | currency: state.currencyFormat }}
+        </ng-container>
+        <ng-container *ngIf="column !== 'Price'">
+          {{ element[column] }}
+        </ng-container>
       </td>
     </ng-container>
     <ng-container matColumnDef="edit">
@@ -48,7 +53,7 @@
         </div>
         <mat-menu #menu>
           <button mat-menu-item (click)="onDelete(i)">Delete</button>
-          <button mat-menu-item (click)="onEdit(element)">Edit</button>
+          <button mat-menu-item (click)="onEdit(i)">Edit</button>
         </mat-menu>
       </td>
     </ng-container>
@@ -63,7 +68,7 @@
   <div>
     <div class="d-flex justify-content-between">
       <button type="button" class="btn">+ Add new trip</button>
-      <span>total:</span>
+      <span>total:{{ totalPrice | currency : state.currencyFormat }}</span>
     </div>
     <div class="d-flex justify-content-end align-items-center">
       <span class="m-4">2 selected </span>
