--- a/src/app/summary/summary-view/summary-view.component.html
+++ b/src/app/summary/summary-view/summary-view.component.html
@@ -12,14 +12,16 @@
   ></app-flight-fare>
   <br />
   <div class="d-flex justify-content-end">
-    <div
+    <div *ngIf="!FromCartPage"
       class="buttons col-6 d-flex justify-content-between align-items-center"
     >
       <button class="link" (click)="goBack()">back</button>
       <button class="btn btn-light" (click)="goToCart()">
         Add to order cart
       </button>
-      <button class="btn btn-primary">Buy now</button>
+      <button  class="btn btn-primary">Buy now</button>
     </div>
+    <button *ngIf="FromCartPage"  class="btn btn-primary"
+    (click)="toUserPage()">Return to Account</button>
   </div>
 </div>
