--- a/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
+++ b/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
@@ -14,7 +14,7 @@
         >
         </mat-checkbox>
       </th>
-      <td mat-cell *matCellDef="let row;">
+      <td mat-cell *matCellDef="let row">
         <mat-checkbox
           (click)="$event.stopPropagation()"
           (change)="$event ? selection.toggle(row) : null"
@@ -24,12 +24,13 @@
         </mat-checkbox>
       </td>
     </ng-container>
+
     <ng-container
       *ngFor="let column of displayedColumns.slice(1, -1)"
       [matColumnDef]="column"
     >
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-      <td  style="white-space: pre" mat-cell *matCellDef="let element">
+      <td style="white-space: pre" mat-cell *matCellDef="let element">
         <ng-container *ngIf="column === 'Price'">
           {{ element[column] | currency : state.currencyFormat }}
         </ng-container>
@@ -38,6 +39,7 @@
         </ng-container>
       </td>
     </ng-container>
+
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef></th>
       <td
@@ -56,11 +58,13 @@
           <button mat-menu-item (click)="onEdit(i)">Edit</button>
         </mat-menu>
         <div class="m-2" *ngIf="isUserMode">
-          <button mat-menu-item (click)="onSummaryCheck(i, $event)" >Summary</button>
-
+          <button mat-menu-item (click)="onSummaryCheck(i, $event)">
+            Summary
+          </button>
         </div>
       </td>
     </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr
       mat-row
@@ -71,13 +75,24 @@
   <br />
   <div>
     <div class="d-flex justify-content-between">
-      <button (click)="onAddnewTrip()" type="button" class="btn">+ Add new trip</button>
+      <button (click)="onAddnewTrip()" type="button" class="btn">
+        + Add new trip
+      </button>
       <span>total:{{ totalPrice | currency : state.currencyFormat }}</span>
     </div>
     <div class="d-flex justify-content-end align-items-center">
       <span class="m-4">{{ onreturnItemsLenght() }} selected </span>
-      <button *ngIf="!isUserMode" type="button" class="btn btn-primary" (click)="onPayment()">Payment</button>
-      <button *ngIf="isUserMode" type="button" class="btn btn-primary">Return to Account</button>
+      <button
+        *ngIf="!isUserMode"
+        type="button"
+        class="btn btn-primary"
+        (click)="onPayment()"
+      >
+        Payment
+      </button>
+      <button *ngIf="isUserMode" type="button" class="btn btn-primary">
+        Return to Account
+      </button>
     </div>
   </div>
 </div>
