feat: finishing acount/cart page with user-date-pipe

--- a/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.css
+++ b/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.css
@@ -5,3 +5,11 @@ table {
 th.mat-sort-header-sorted {
   color: black;
 }
+
+.clickable {
+  cursor: pointer;
+}
+
+.mat-mdc-header-row th {
+  font-weight: 700;
+}
