--- a/src/app/summary/summary-view/summary-view.component.html
+++ b/src/app/summary/summary-view/summary-view.component.html
@@ -1,4 +1,4 @@
-<div style="padding-top: 20px;" class="container">
+<div style="padding-top: 20px" class="container">
   <h2>Summary</h2>
   <app-flight-details
     [oneWayFlight]="oneWayFlight"
@@ -12,16 +12,20 @@
   ></app-flight-fare>
   <br />
   <div class="d-flex justify-content-end">
-    <div *ngIf="!FromCartPage"
+    <div
+      *ngIf="!editMode; else toUser"
       class="buttons col-6 d-flex justify-content-between align-items-center"
     >
       <button class="link" (click)="goBack()">back</button>
       <button class="btn btn-light" (click)="goToCart()">
         Add to order cart
       </button>
-      <button  class="btn btn-primary">Buy now</button>
+      <button class="btn btn-primary">Buy now</button>
     </div>
-    <button *ngIf="FromCartPage"  class="btn btn-primary"
-    (click)="toUserPage()">Return to Account</button>
+    <ng-template #toUser>
+      <button class="btn btn-primary" (click)="toUserPage()">
+        Return to Account
+      </button>
+    </ng-template>
   </div>
 </div>
