--- a/src/app/main-page/components/flights-form/flights-form.component.html
+++ b/src/app/main-page/components/flights-form/flights-form.component.html
@@ -4,7 +4,7 @@
   <form
     [formGroup]="searchForm"
     (submit)="onSubmit()"
-    class="container-sm d-flex align-items-center justify-content-center posRel"
+    class="container-sm d-flex align-items-center justify-content-center posRel flex-wrap"
     [class.horizontal]="!isEdit"
     [class.vertical]="isEdit"
   >
