--- a/src/app/booking/components/flights-search-result/flights-search-result.component.html
+++ b/src/app/booking/components/flights-search-result/flights-search-result.component.html
@@ -1,4 +1,4 @@
-<div class="container-md ">
+<div class="container-md">
   <one-side
     *ngIf="oneWayFlights"
     [flights]="oneWayFlights"
@@ -13,7 +13,7 @@
   ></one-side>
 
   <div class="d-flex justify-content-end">
-    <button class="btn" (click)="clickBack()">back</button>
+    <button class="btn color-main" (click)="clickBack()">back</button>
     <button
       class="btn btn-primary"
       (click)="clickContinue()"
