--- a/src/app/booking/components/one-side/one-side.component.css
+++ b/src/app/booking/components/one-side/one-side.component.css
@@ -1,3 +1,14 @@
+.bg-white {
+  background-color: white;
+  margin-bottom: 1%;
+}
+.oniSide-title {
+  color: #11397e;
+  margin-left: 15px;
+}
+.color-main {
+  color: #11397e !important;
+}
 .flight-card {
   width: 15%;
   background-color: white;
@@ -6,7 +17,7 @@
   position: relative;
   padding-bottom: 16px;
 }
-.cards-container{
+.cards-container {
   position: relative;
 }
 .highlighted {
@@ -28,19 +39,19 @@
   border: thin gray solid;
   box-shadow: gray 3px 3px 4px;
 }
-.arrows{
+.arrows {
   position: absolute;
   transform: translateY(-50%);
   top: 50%;
   left: 0;
   right: 0;
 }
-.arrows>img{
+.arrows > img {
   cursor: pointer;
 }
 
 @media only screen and (max-width: 700px) {
-  .flight-card{
+  .flight-card {
     width: 45%;
   }
 }
