--- a/src/app/booking/components/one-side/one-side.component.html
+++ b/src/app/booking/components/one-side/one-side.component.html
@@ -1,10 +1,10 @@
-<h2 style="margin-left: 15px">
+<h2 class="oniSide-title">
   <span><img src="../../../assets/planeRight.png" alt="planr" /></span>
   {{ flights[0].from }} to {{ flights[0].to }}
 </h2>
 <div
   *ngIf="!state.isSelected"
-  class="cards-container justify-content-center align-items-center d-flex m-2 flex-wrap"
+  class="bg-white cards-container justify-content-center align-items-center d-flex m-2 flex-wrap"
 >
   <div class="arrows d-flex justify-content-between align-items-center">
     <img
@@ -25,11 +25,13 @@
     #card
     [id]="flight.id"
   >
-    <div>
+    <div class="text-primary">
       {{ flight.date | userFormat : "shortDate" : headerState.dateFormat }}
     </div>
-    <div>{{ flight.date | date : "EEEE" }}</div>
-    <div>{{ flight.cost | currency : headerState.currencyFormat }}</div>
+    <div class="text-secondary">{{ flight.date | date : "EEEE" }}</div>
+    <div class="color-main">
+      {{ flight.cost | currency : headerState.currencyFormat }}
+    </div>
     <div
       *ngIf="selectedCard?.id === card.id"
       class="highlighted"
