--- a/src/app/passengers/components/passenger-contact-info/passenger-contact-info.component.html
+++ b/src/app/passengers/components/passenger-contact-info/passenger-contact-info.component.html
@@ -1,4 +1,12 @@
-<h1>Contact details</h1>
+<h1>
+  <span class="d-inline-flex align-items-center"
+    ><img
+      style="width: 25px"
+      src="../../../assets/contactinfo.png"
+      alt="contact img"
+  /></span>
+  Contact details
+</h1>
 <p>
   We need contact details to be able to deliver the latest information regarding
   your flight.
