fix(booking-view): still display selected flight

--- a/src/app/booking/components/flights-search-result/flights-search-result.component.html
+++ b/src/app/booking/components/flights-search-result/flights-search-result.component.html
@@ -2,13 +2,13 @@
   <one-side
     *ngIf="oneWayFlights"
     [flights]="oneWayFlights"
-    type="one-way"
+    [selectedCard]="selectedData?.oneWay"
     (storeSelect)="storeChoise('one-way', $event)"
   ></one-side>
   <one-side
     *ngIf="backFlights"
     [flights]="backFlights"
-    type="back"
+    [selectedCard]="selectedData?.backWay"
     (storeSelect)="storeChoise('back', $event)"
   ></one-side>
 
