minor style fixes

--- a/src/app/summary/summary-view/summary-view.component.html
+++ b/src/app/summary/summary-view/summary-view.component.html
@@ -1,5 +1,5 @@
 <div style="padding-top: 20px" class="container">
-  <h2>Summary</h2>
+  <h2> <span><img style="width: 25px;" src="../../../assets/summary.png" alt="summary"></span> Summary</h2>
   <app-flight-details
     [oneWayFlight]="oneWayFlight"
     [backFlight]="backFlight"
@@ -14,10 +14,10 @@
   <div class="d-flex justify-content-end">
     <div
       *ngIf="!editMode; else toUser"
-      class="buttons col-6 d-flex justify-content-between align-items-center"
+      class="buttons col-12 col-lg-6 d-flex justify-content-end align-items-center"
     >
       <button class="link" (click)="goBack()">back</button>
-      <button class="btn btn-light" (click)="goToCart()">
+      <button style="margin: 0px 10px;" class="btn btn-light" (click)="goToCart()">
         Add to order cart
       </button>
       <button class="btn btn-primary">Buy now</button>
