--- a/src/app/summary/components/passanger-info/passanger-info.component.html
+++ b/src/app/summary/components/passanger-info/passanger-info.component.html
@@ -2,7 +2,7 @@
         *ngFor="let passenger of passengerArr; let i = index"
       >
         <hr />
-        <h2>{{passangerType}}: {{ passenger.name }} - {{ passenger.surname }}</h2>
+        <h2 style="padding-left: 20px;">{{passangerType}}: {{ passenger.name }} - {{ passenger.surname }}</h2>
         <hr />
         <ul>
           <li *ngIf="passenger.baggage">{{ passenger.baggage }} checked bag (total 23 kg) included</li>
