--- a/src/app/user-authentication/authentication-form-container/authentication-form-container.component.css
+++ b/src/app/user-authentication/authentication-form-container/authentication-form-container.component.css
@@ -23,8 +23,10 @@
   right: 10%;
   top: 70px;
 }
-@media only screen and (max-width: 520px) {
+@media only screen and (max-width: 600px) {
   .custom {
-    width: 100vw;
+    max-width: 90vw;
+    right: 0;
+    left: 0;
   }
 }
