--- a/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
+++ b/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
@@ -64,22 +64,38 @@
     </ng-container>
 
     <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef></th>
+      <th mat-header-cell *matHeaderCellDef>
+        {{ !isUserMode ? "" : "Payed" }}
+      </th>
       <td
         class="d-flex align-items-center"
         mat-cell
         *matCellDef="let i = index; let element"
-        style="width: auto"
+        style="width: auto; padding-block: 1rem"
       >
-        <div class="m-2" *ngIf="!isUserMode">
-          <button mat-icon-button [mat-menu-trigger-for]="menu">
+        <div class="m-2">
+          <button
+            mat-icon-button
+            [mat-menu-trigger-for]="menu"
+            *ngIf="!isUserMode; else payed"
+          >
             <mat-icon>more_vert</mat-icon>
           </button>
+          <mat-menu #menu>
+            <button mat-menu-item (click)="onDelete(i)">Delete</button>
+            <button mat-menu-item (click)="onEdit(i)">Edit</button>
+          </mat-menu>
+          <ng-template #payed>
+            <mat-icon
+              [class]="{
+                icon: true,
+                payed: element.payed,
+                'not-payed': !element.payed
+              }"
+              >{{ element.payed ? "done" : "remove" }}</mat-icon
+            >
+          </ng-template>
         </div>
-        <mat-menu #menu>
-          <button mat-menu-item (click)="onDelete(i)">Delete</button>
-          <button mat-menu-item (click)="onEdit(i)">Edit</button>
-        </mat-menu>
       </td>
     </ng-container>
 
